--- a/shoppingmall_t/practice.css
+++ b/shoppingmall_t/practice.css
@@ -50,43 +50,65 @@
   }
 }
 
-*/
-html, body {
-  padding: 0;
+
+::placeholder {
+  color: rgb(55, 223, 198);
+  opacity: 1;
+}
+div {
+  height: 40px;
+  width: 400px;
+  border: 1px solid #1b5ac2;
+  background: #ffffff;
+}
+input {
+  font-size: 16px;
+  width: 320px;
+  line-height: 40px;
+  border: 0;
+  outline: none;
+  float: left;
   margin: 0;
+  padding: 0 15px;
+  
 }
-.line {
-  position: relative;
-  background-color: rgb(93, 232, 195);
-  width: 100%;
-  height: 100px;
+button {
+  width: 50px;
+  height: 100%;
+  border: 0;
+  background: #1b5ac2;
+  outline: none;
+  float: right;
+  color: #ffffff;
 }
-.move {
-    position: absolute;
-    left: -50px;
-    line-height: 100px;
-    animation-name: flow;
-    animation-duration: 20s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+*/
+::placeholder {
+  color: rgb(45, 215, 113);
 }
-.move:nth-child(1) {
-  animation-delay: 0;
+div {
+  width: 300px;
+  height: 50px;
+  background-color: red;
+  border: 3px solid rgb(113, 255, 170);
 }
-.move:nth-child(2) {
-  animation-delay: 4s;
+input {
+  width: 230px;
+  font-size: 35px;
+  padding: 0 0 0 20px;
+  border: 0;
+  outline: 0;
+  line-height: 50px;
+  float: left;
 }
-.move:nth-child(3) {
-  animation-delay: 8s;
-}
-@keyframes flow {
-  0% {
-    transform: translateX(0);
-  }
-  50% {
-    transform: translateX(1000px);
-  }
-  100% {
-    transform: translateX(2000px);
-  }
+button {
+  width: 50px;
+  height: 100%;
+  border: 0;
+  padding: 0;
+  outline: none;
+  float: right;
+  background-color: rgb(113, 255, 170);
+  color: white;
+  font-size: 15px;
+  font-weight: 700;
 }
